--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -7,12 +7,12 @@
 <setting-section data-title="通用">
     <setting-panel>
         <setting-list data-direction="column">
-            <setting-item>
-                <div>
-                    <setting-button id="actionNow" data-type="secondary">立即触发(调试功能)</setting-button>
-                    <setting-text data-type="secondary">手动触发一次发送。</setting-text>
-                </div>
-            </setting-item>
+<!--            <setting-item>-->
+<!--                <div>-->
+<!--                    <setting-button id="actionNow" data-type="secondary">立即触发(调试功能)</setting-button>-->
+<!--                    <setting-text data-type="secondary">手动触发一次发送。</setting-text>-->
+<!--                </div>-->
+<!--            </setting-item>-->
             <setting-item>
                 <div>
                     <setting-text>修仙群号</setting-text>
